--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
+  background-color: #fff;
+  font-family: Poppins;
+  font-size: 14px;
+  line-height: 25px;
+  text-decoration: none solid rgb(119, 119, 119);
+  word-spacing: 0px;
+  height: 399.996px;
+  padding: 0 80px 0 80px;
+  position: inherit;
+  flex-direction: row;
+}
+
+.cont-text {
+  width: 50%;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-right: 40;
 }
 
-.App-link {
-  color: #61dafb;
+.cont-image {
+  display: flex;
+  width: 50%;
+  height: 400;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: auto;
+}
+.cont-image img {
+  max-width: 100%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cont-charity {
+  font-family: opensans, "Halvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  text-decoration: none solid rgb(0, 0, 0);
+  word-spacing: 0px;
+  color: black;
+  text-align: left;
+}
+.cont-desc {
+  text-decoration: none solid rgb(0, 0, 0);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  word-spacing: 0px;
+  height: 39.96px;
+  width: 559.26px;
+  margin: 25px 0 25px 0;
+  min-height: auto;
+  min-width: auto;
+  display: block;
+  font-weight: 500;
+  max-width: 100%;
+  height: auto;
+}
+
+.cont-button-learnmore {
+  font-family: Poppins;
+  font-size: 13px;
+  font-weight: 700;
+  letter-spacing: 0.13px;
+  line-height: 18.5714px;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+button:hover {
+  cursor: pointer;
+}
+.learn-more {
+  font-family: opensans, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  letter-spacing: 0.13px;
+  line-height: 18.5714px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-spacing: 0px;
+  background-color: #222529;
+  color: aliceblue;
+  padding: 10px 26px 10px 26px;
+  margin: 20px 0 0 0;
+  border: 1px solid #fff;
+  width: 142.632px;
+  height: 41.34px;
+  text-decoration: none solid rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+.image {
+  width: 550.5px;
+}
+
+.d-flex div {
+  padding: 1rem;
 }
