--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,14 @@
   flex-direction: row;
 }
 
-.cont-text {
+.charity .cont-text {
   width: 50%;
   flex-direction: column;
   justify-content: center;
   padding-right: 40;
 }
 
-.cont-image {
+.charity .cont-image {
   display: flex;
   width: 50%;
   height: 400;
@@ -28,12 +28,12 @@
   max-width: 100%;
   height: auto;
 }
-.cont-image img {
+.charity .cont-image img {
   max-width: 100%;
   height: auto;
 }
 
-.cont-charity {
+.charity .cont-charity {
   font-family: opensans, "Halvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 30px;
   font-weight: 700;
@@ -42,7 +42,7 @@
   color: black;
   text-align: left;
 }
-.cont-desc {
+.charity .cont-desc {
   text-decoration: none solid rgb(0, 0, 0);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -60,7 +60,7 @@
   height: auto;
 }
 
-.cont-button-learnmore {
+.charity .cont-button-learnmore {
   font-family: Poppins;
   font-size: 13px;
   font-weight: 700;
@@ -71,8 +71,11 @@
 }
 button:hover {
   cursor: pointer;
+  transform: scale(1.2);
+  transition-duration: 0.25s;
 }
-.learn-more {
+
+.charity .learn-more {
   font-family: opensans, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: 700;
@@ -93,10 +96,16 @@ button:hover {
   border-radius: 5px;
 }
 
-.image {
+.charity .image {
   width: 550.5px;
+  border-radius: 5px;
+}
+img:hover {
+  transition-duration: 0.2s;
+  transform: scale(1.1);
 }
 
-.d-flex div {
+.charity div {
   padding: 1rem;
+  margin-top: 5px;
 }
