--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
   vertical-align: middle;
   white-space: nowrap;
 }
-button:hover {
+.charity button:hover {
   cursor: pointer;
   transform: scale(1.2);
   transition-duration: 0.25s;
@@ -108,4 +108,36 @@ img:hover {
 .charity div {
   padding: 1rem;
   margin-top: 5px;
+}
+
+.charity2 .searchbardiv {
+  width: 100%;
+  height: 20%;
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+  padding: 20px;
+}
+
+.charity2 .searchbar {
+  width: 20rem;
+  border-radius: 5px 0px 0px 5px;
+  border-width: 2px;
+  border-color: rgb(190, 189, 189);
+  border-right: none;
+  font-size: 15px;
+  padding: 5px;
+  border-style: solid;
+  border-right-width: 0px;
+}
+
+.charity2 .search-button {
+  background-color: white;
+  border-width: 2px;
+  border-color: rgb(190, 189, 189);
+  border-left: none;
+  height: 31.5px;
+  border-radius: 0px 5px 5px 0px;
+  border-style: solid;
+  border-left-width: 0px;
 }
