--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,14 @@ img:hover {
   border-color: rgb(190, 189, 189);
   border-left: none;
   height: 31.5px;
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 5px 0px 0px 5px;
   border-style: solid;
-  border-left-width: 0px;
+  border-right-width: 0px;
+  border-left-width: 2px;
+  border-left-color: rgb(190, 189, 180);
+  transform: rotateY(180deg);
+  color: rgb(128, 126, 126);
+}
+.charity2 button:hover {
+  cursor: pointer;
 }
