--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,49 @@ img:hover {
 .charity2 button:hover {
   cursor: pointer;
 }
+
+/* My Code starts here */
+
+.social-Media {
+  display: flex;
+  flex-direction: row;
+  margin-left: -100px;
+  margin-top: 10px;
+}
+.foot {
+  display: flex;
+  flex-direction: row;
+  margin-left: -17px;
+  color: white;
+  margin-top: 10px;
+}
+
+.social-container {
+  background: #fff;
+  padding: 25px 50px;
+}
+a.social {
+  margin: 0 1rem;
+  transition: transform 250ms;
+  display: inline-block;
+}
+a.social:hover {
+  transform: translateY(-3px);
+}
+a.youtube {
+  color: #eb3223;
+}
+
+a.linkedin {
+  color: #4968ad;
+}
+
+a.twitter {
+  color: #49a1eb;
+}
+
+a.instagram {
+  color: rgb(247, 238, 238);
+}
+
+/* My Code ends here */
