--- a/src/Components/Backvideo.css
+++ b/src/Components/Backvideo.css
@@ -31,7 +31,8 @@ video {
   z-index: -1;
   top: 0px;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 1458.43px;
+  height: 499.992px;
   object-fit: cover;
+  margin-top: 50px;
 }
