--- a/src/Components/Backvideo.css
+++ b/src/Components/Backvideo.css
@@ -29,10 +29,12 @@
 video {
   position: absolute;
   z-index: -1;
-  top: 0px;
+  top: 25px;
   left: 0;
-  width: 1458.43px;
+  width: 1290.43px;
   height: 499.992px;
   object-fit: cover;
+  margin-left: 10px;
+
   margin-top: 50px;
 }
