--- a/src/Components/Backvideo.css
+++ b/src/Components/Backvideo.css
@@ -1,5 +1,5 @@
 .backvideo-container {
-  height: 600px;
+  height: 450px;
 }
 
 .text-wrapper {
@@ -31,7 +31,7 @@ video {
   z-index: -1;
   top: 25px;
   left: 0;
-  width: 1290.43px;
+  width: 100%;
   height: 499.992px;
   object-fit: cover;
   margin-left: 10px;
