Slider css modified for responsive feature

--- a/src/Components/slider.css
+++ b/src/Components/slider.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height:450px;
+  height: 100%;
   min-width: auto;
   min-height: auto;
   box-sizing: border-box;
@@ -8,71 +8,79 @@
   flex-direction: row;
   margin-top: 10px;
   margin-bottom: 10px;
-}
-.slide {
-  width: 360px;
-  height: 370px;
-  min-width: auto;
-  min-height: auto;
   padding: 10px;
 }
-.slide h2{
+
+.slide h2 {
   font-size: 32px;
   font-weight: 700;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-.slide p{
+.slide p {
   font-size: 14px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 .slide img {
-  width: 360px;
-  height: 350px;
+  width: 300px;
+  height: 340px;
+  min-width: auto;
+  min-height: auto;
+  box-sizing: border-box;
 }
-.disc{
-  width: 60%;
-  height: 350px;
+.disc {
+  width: 70%;
+  height: 90%;
   padding: 10px;
   min-width: auto;
   min-height: auto;
 }
 .disc .logo {
   width: 100%;
+  height: 20%;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 }
-.disc .logo img{
-  width: 20%;
-  height: 120px;
+.disc .logo img {
+  width: 100px;
+  height: 100px;
 }
-.disc .logo h2{
-  height: 120px;
+.disc .logo h2 {
+  height: 20%;
   width: 70%;
   font-size: 36px;
-  margin: 0%;
   font-weight: 700;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-.disc p{
+.disc p {
+  width: 100%;
+  height: 70%;
   font-size: 14px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  justify-content: start;
 }
 .disc .buttons {
-  height:50px;
+  height: 10%;
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
 }
-.disc button{
-  height: 50px;
-  width: 140px;
-  background:#000000;
+.disc button {
+  height: 100%;
+  width: 20%;
+  background: #000000;
   padding: 10px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
-  color:#fcfcfc;
+  color: #fcfcfc;
   border-radius: 5px;
   border: none;
   letter-spacing: 0.2px;
+}
+@media screen and (max-width: 700px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
 }
